# merkeziyetsiz-veri-koruma

./: .gitmodules  Cargo.toml  LICENSE  README.md
arweave_uploader/: package-lock.json  package.json  upload.js
key_manager_lit/: auth_helper.js  decrypt_string.js  encrypt_string.js  lit_client.js  package-lock.json  package.json
merkeziyetsiz-ui/: package-lock.json  package.json
merkeziyetsiz-ui/src/app/: layout.tsx  page.tsx
merkeziyetsiz-ui/src/components/: ConnectWallet.tsx  FileProcessor.tsx
merkeziyetsiz-ui/src/contracts/: MetadataStorage.json
merkeziyetsiz-ui/src/services/: arweaveService.ts  contractService.ts  fileTypes.ts  litService.ts
smart-contracts/metadata-storage-contract/: foundry.toml
smart-contracts/metadata-storage-contract/broadcast/DeployMetadataStorage.sol/11155111/: run-1748481018.json  run-1748481234.json  run-latest.json
smart-contracts/metadata-storage-contract/script/: DeployMetadataStorage.sol
smart-contracts/metadata-storage-contract/src/: MetadataStorage.sol
smart-contracts/metadata-storage-contract/test/: MetadataStorageTest.sol
src/: encryption.rs  lib.rs  main.rs  storage.rs
test_data/: test_video.rar
